ags (3.6.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing return value of ags_window_button_press_event()

ags (3.6.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed pthread remains

ags (3.6.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags_fast_pitch_util.[ch]
	* implemented some get type functions of enum values
	* refactored ags_sf2_synth_util.c
	* refactored ags_sfz_synth_util.c

ags (3.6.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed gtk-doc
	* additional audio file formats of AgsExportSoundcard and AgsWaveExportDialog

ags (3.6.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented GStreamer support
	* implemented AgsComplex support in ags_fourier_transform_util.[ch]
	* implemented some get type functions of enum values
	* improved the developer's manual
	* fixed AgsWaveExportDialog missing delete-event callback
	* minor improvements

ags (3.5.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing AgsMutable interface of ags-fx-volume
	* improved thread-safety of AgsServer
	* improved thread-safety of AgsOscServer

ags (3.5.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed NULL pointer of ags_ui_provider_get_navigation()
	* fixed missing update of LV2_Options_Option after configuration changed

ags (3.5.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed initial loop set of AgsDrum, AgsMatrix, AgsFFPlayer, AgsPitchSampler,
	  AgsAudiorec, AgsDssiBridge, AgsLiveDssiBridge, AgsLv2Bridge and AgsLiveLv2Bridge

ags (3.5.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed AgsDssiBridge accessing integer as string

ags (3.5.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing reset of notation edit's horizont scrollbar after zoom changed

ags (3.5.11)
