@@ -35,6 +35,12 @@
   <url type="homepage">https://nongnu.org/gsequencer</url>
 
   <releases>
+    <release version="3.6.5" date="2020-11-01">
+      <description>
+	<p>Added Gstreamer env variables on mingw64.</p>
+      </description>
+    </release>
+
     <release version="3.6.4" date="2020-10-31">
       <description>
 	<p>Fixed missing return value of AgsWindow's button_press_event() callback</p>
