@@ -1,3 +1,8 @@
+ags (3.6.5)
+
+	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
+	* added gstreamer environment variables for mingw64
+
 ags (3.6.4)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
